data/derived/sp14/progs/unify/prog4477.ml.out
Characters 376-377:
  | Halve (u) -> eval(u,x,y) /. 2
                                ^
Error: This expression has type int but an expression was expected of type
         float
